Adds sample page directory, placeholder

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 <p><a href="https://github.com/khawkins98/EBI-Framework/archive/master.zip" class="button sans-serif">Download the framework</a> or <a href="https://github.com/khawkins98/EBI-Framework/">view on Github</a></p>
 
                 <h3>How to implement</h3>
-                <p>THIS SECTION IS IN PROGREASS.</p>
+                <p>THIS SECTION IS IN PROGRESS.</p>
 
                 <p>In short: add header markup, footer markup, CSS and JS. Then add content.</p>
 
@@ -1011,7 +1011,7 @@
               <h4>See also</h4>
               <p>These resources will help you engage and understand the EBI Framework.</p>
               <div class="">
-                <ul>
+                <ul class="menu vertical">
                   <li class=""><a href="https://github.com/khawkins98/EBI-Framework">GitHub repository</a></li>
                   <li class=""><a href="https://github.com/khawkins98/EBI-Framework/issues">Issue queue</a></li>
                   <li class=""><a href="https://khawkins98.github.io/EBI-Framework/sample-site/">Sample pages</a></li>
