--- a/sample-site/index.html
+++ b/sample-site/index.html
@@ -78,7 +78,7 @@
   </div>
 
   <div data-sticky-container>
-    <div id="local-masthead" data-sticky data-sticky-on="disabled" data-top-anchor="180" data-btm-anchor="300000">
+    <div id="local-masthead" data-sticky data-sticky-on="large" data-top-anchor="180" data-btm-anchor="300000">
       <header>
 
         <div id="global-masthead" class="clearfix">
@@ -136,7 +136,7 @@
           <!-- local-nav -->
               <nav >
                 <ul class="dropdown menu float-left" data-description="navigational">
-                  <li class="../"><a href="documentation.html">Overview</a></li>
+                  <li class=""><a href="../">Overview</a></li>
                   <li><a data-open="modal-download">Download</a></li>
                   <li><a href="#">Support <i class="icon icon-generic" data-icon="x"></i></a></li>
                 </ul>
@@ -188,6 +188,21 @@
               <dt>TO COME</dt>
               <dd>TO COME</dd>
 
+
+              <h3>bare bones...</h3>
+              <ul>
+                <li><a href="ebi-level2-boilerplate-blank-fluid.html">Blank</a> - big, empty space between header and footer</li>
+                <li><a href="ebi-level2-boilerplate-right-sidebar-fluid.html">Right sidebar</a> - for content-driven pages deeper in your site's hierarchy, the sidebar could contain secondary navigation</li>
+                <li><a href="ebi-level2-boilerplate-4cols-fluid.html">Four columns</a> - an example of dividing the page into four broad content areas</li>
+                <li><a href="ebi-level2-boilerplate-search-results-fluid.html">Search results</a> - an example page with filters or facets for your results in a left-hand sidebar, and a right-hand sidebar for global results</li>
+              </ul>
+              <h3>Search Results Examples</h3>
+              <ul>
+                <li><a href="ebi-search-results-complete.html">Search Results Complete</a> - template for a basic search results page </li>
+                <li><a href="ebi-no-search-results.html">No Search Results</a> - template for a page of zero results </li>
+              </ul>
+
+
             </dl>
 
             <h4>Partial implementations</h4>
@@ -209,7 +224,7 @@
 
           <div class="small-12 medium-3 columns sidebar" data-sticky-container>
             
-            <div class="sticky" data-sticky data-anchor="main-content-area"  data-options="marginTop:1;">
+            <div class="sticky" data-sticky data-anchor="main-content-area"  data-options="marginTop:4;">
               <h4>See also</h4>
               <p>These resources will help you engage and understand the EBI Framework.</p>
               <div class="">
