Updates demo index

--- a/sample-site/index.html
+++ b/sample-site/index.html
@@ -172,52 +172,52 @@
             <h3>Framework sample pages</h3>
             <p>These demonstrate a range of ways you can make use of the EBI styles and framework.</p>
 
-            <h4>Tier 1 implementations</h4>
-            <p>For services aiming for full compliance.</p>
 
-            <dl>
-              <dt><a href="front_page.html">EBI Homepage</a></dt>
-              <dd>test</dd>
-
-              <dt><a href="research.html">Research page</a></dt>
-              <dd>test</dd>
-
-              <dt><a href="brochure.html">Brochure page</a></dt>
-              <dd>Technical recruitment</dd>
-
-              <dt>TO COME</dt>
-              <dd>TO COME</dd>
-
-
-              <h3>bare bones...</h3>
-              <ul>
-                <li><a href="ebi-level2-boilerplate-blank-fluid.html">Blank</a> - big, empty space between header and footer</li>
-                <li><a href="ebi-level2-boilerplate-right-sidebar-fluid.html">Right sidebar</a> - for content-driven pages deeper in your site's hierarchy, the sidebar could contain secondary navigation</li>
-                <li><a href="ebi-level2-boilerplate-4cols-fluid.html">Four columns</a> - an example of dividing the page into four broad content areas</li>
-                <li><a href="ebi-level2-boilerplate-search-results-fluid.html">Search results</a> - an example page with filters or facets for your results in a left-hand sidebar, and a right-hand sidebar for global results</li>
-              </ul>
-              <h3>Search Results Examples</h3>
-              <ul>
-                <li><a href="ebi-search-results-complete.html">Search Results Complete</a> - template for a basic search results page </li>
-                <li><a href="ebi-no-search-results.html">No Search Results</a> - template for a page of zero results </li>
-              </ul>
+            <h4 id="boilerplate">Boilerplate</h4>
+            <p>You can use these as templates for your code.</p>
+            <ol>
+              <li><a href="">Blank</a><br/>
+              big, empty space between header and footer</li>
+              <li><a href="ebi-level2-boilerplate-right-sidebar-fluid.html">TO COME - Right sidebar</a><br/>
+              for content-driven pages deeper in your site's hierarchy, the sidebar could contain secondary navigation</li>
+              <li><a href="ebi-level2-boilerplate-4cols-fluid.html">TO COME - Four columns</a><br/>
+              an example of dividing the page into four broad content areas</li>
+              <li><a href="ebi-level2-boilerplate-search-results-fluid.html">TO COME - Search results</a><br/>
+              an example page with filters or facets for your results in a left-hand sidebar, and a right-hand sidebar for global results</li>
+              <li><a href="ebi-search-results-complete.html">TO COME - Search Results Complete</a><br/>
+              template for a basic search results page </li>
+              <li><a href="ebi-no-search-results.html">TO COME - No Search Results</a><br/>
+                template for a page of zero results </li>
+            </ol>
 
 
-            </dl>
+            <h4>Level 1 implementations</h4>
+            <p>Examples of services aiming for full compliance.</p>
 
-            <h4>Partial implementations</h4>
+            <ol>
+              <li><a href="front_page.html">EBI Homepage</a> <br/>
+              test</li>
+
+              <li><a href="research.html">Research page</a> <br/>
+              test</li>
+
+              <li><a href="brochure.html">Brochure page</a> <br/>
+              Technical recruitment</li>
+            </ol>
+
+            <h4>Partial and Level 3 implementations</h4>
             <p>These examples show implementations of sites making use of only part of the EBI visual guidelines or technical framework  .</p>
 
-            <dl>
-              <dt>Bootstrap TO COME</dt>
-              <dd>For services aiming for full visual compliance but not using the Foundation Framework base.</dd>
+            <ol>
+              <li><a href="">TO COME - Bootstrap</a><br/>
+              For services aiming for full visual compliance but not using the Foundation Framework base.</li>
 
-              <dt>No JS TO COME</dt>
-              <dd>Using the Foundation base framework with JavaScript or jQuery.</dd>
+              <li><a href="">TO COME - No JS</a><br/>
+              Using the Foundation base framework with JavaScript or jQuery.</li>
 
-              <dt>No JS or Foundation TO COME</dt>
-              <dd>You won't benefit from any of the reusable components, but here's a bare bones visual implentation.</dd>
-            </dl>
+              <li><a href="">TO COME - No JS or Foundation</a><br/>
+              You won't benefit from any of the reusable components, but here's a bare bones visual implentation.</li>
+            </ol>
 
           </div> <!-- /medium-9 -->
 
